--- a/style.css
+++ b/style.css
@@ -1,6 +1,10 @@
-body, h1, h2, ul, li {
+body, h1, h2, ul, li, p {
     padding: 0px;
     margin: 0px;
+}
+
+p {
+    padding-top: 7px;
 }
 
 ul {
@@ -49,4 +53,120 @@ body {
 
 .produto_preco {
     color: rgba(0, 0, 0,.5);
+}
+
+/* Modal */
+
+.modal::before {
+    content: "";
+    position: fixed;
+    top: 0px;
+    left: 0px;
+    width: 100%;
+    height: 100vh;
+    background: rgba(0,0,0, .5);
+}
+
+.modal {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    position: absolute;
+    top: 0px;
+    left: 0px;
+    width: 100%;
+    padding: 80px;
+}
+
+.modal_container {
+    position: relative;
+    background: linear-gradient(to right, transparent 250px, white 250px);
+    z-index: 1;
+    display: grid;
+    align-items: end;
+    grid-gap: 50px;
+    padding: 0px 50px 50px 0px;
+    animation: fadeIn .3s forwards;
+}
+
+@keyframes fadeIn {
+    from {
+        opacity: 0;
+        transform: translate3d(50px, 0, 0);
+    }
+    to {
+        transform: translate3d(0px, 0, 0);
+    }
+}
+
+.modal_fechar {
+   border-radius: 50%;
+   border: 2px solid #000;
+   width: 40px;
+   height: 40px; 
+   position: absolute;
+   color:#000;
+   top: -10px;
+   right: -10px;
+   font-size: 1rem;
+   box-shadow: 0px 3px 4px rgba(0,0,0,.1), 0px 4px 10px rgba(0,0,0,.2);
+   cursor: pointer;
+   background: #fff;
+}
+
+.modal_img {
+    grid-column: 1;
+    margin-top: 50px;
+    box-shadow: 0px 3px 4px rgba(0,0,0,.1), 0px 4px 10px rgba(0,0,0,.2);
+}
+
+.modal_img img {
+    max-width: 300px;
+    display: block;
+}
+
+.modal_dados {
+    grid-column: 2;
+    max-width: 600px;
+}
+
+.modal_titulo {
+    font-size: 3rem;
+}
+
+.modal_btn {
+    margin-top: 80px;
+    background: #000;
+    cursor: pointer;
+    color: #ffffff;
+    border: none;
+    font-size: 1rem;
+    padding: 10px 25px;
+    font-family: "Noto Serif";
+}
+
+.modal_btn:active {
+    background: #808080;
+}
+
+.avaliacoes {
+    grid-column: 2;
+}
+
+.avaliacao {
+    border-bottom: 1px solid rgba(0,0,0,.1);
+    padding-bottom: 20px;
+}
+
+.avaliacao_subtitulo {
+    font-size: 1.75rem;
+}
+
+.aaliacao_descricao {
+    color: rgba(0,0,0,.7);
+    margin: 20px 0px 5px 0px;
+}
+
+.avaliacao_usuario {
+    font-weight: bold;
 }
