--- a/style.css
+++ b/style.css
@@ -24,6 +24,36 @@ body {
     padding: 0 80px;
 }
 
+/* HEADER */
+
+.header {
+    display: flex;
+    justify-content: space-between;
+    max-width: 900px;
+    padding: 20px 0;
+    margin: 0 auto;
+}
+
+.logo {
+    width: 80px;
+}
+
+.carrinho_menu::after {
+    content: "";
+    display: inline-block;
+    background: url("./assets/carrinho.svg") no-repeat center center;
+    width: 25px;
+    height: 25px;
+    margin-left: 10px;
+}
+
+.caarinho_menu {
+    display: flex;
+    align-items: center;
+    cursor: pointer;
+}
+
+
 /* Lista Prdutos */
 
 .produtos {
@@ -145,6 +175,10 @@ body {
     font-family: "Noto Serif";
 }
 
+.modal_btn.esgotado {
+    background-color: #808080;
+}
+
 .modal_btn:active {
     background: #808080;
 }
@@ -169,4 +203,41 @@ body {
 
 .avaliacao_usuario {
     font-weight: bold;
+}
+
+/* ALERTA */
+
+.alerta {
+    position: absolute;
+    top: 20px;
+    left: 0px;
+    z-index: 10;
+    width: 100%;
+    text-align: center;
+    display: none;
+}
+
+.alerta.ativo {
+    display: block;
+    animation: fadeInDown .3s forwards;
+}
+
+@keyframnes fadeInDown {
+    from {
+        transform: translate3d(0, -30px, 0);
+        opacity: 0;
+    }
+    to {
+        opacity: 1;
+        transform: translate3d(0, 0px, 0);
+    }
+}
+
+.alerta_mensagem {
+    background: #ffffff;
+    display: inline-block;
+    padding: 20px 40px;
+    border: 2px solid black;
+    box-shadow: 0p 3px 4px rgba(0,0,0.1) 0px 4px 10px rgba(0,0,0.2);
+
 }
